--- a/WebUI/Views/Books/List.cshtml
+++ b/WebUI/Views/Books/List.cshtml
@@ -8,8 +8,8 @@
 @foreach (Book book in Model)
 {
     <div>
-        <h3>@book.Name</h3>
-        <p>@book.Author</p>
+        <h3>@book.Name - @book.Author</h3>
+        <p>@book.Description</p>
         <h4>@book.Price.ToString("# UAH")</h4>
     </div>
     <hr />
